# Gravital-Shell

./: .gitignore  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/sh/gravital/shell/: MainActivity.kt
app/src/main/kotlin/sh/gravital/shell/bridge/: GravitalShellBridge.kt
app/src/main/kotlin/sh/gravital/shell/files/: FileBridgeScreen.kt
app/src/main/kotlin/sh/gravital/shell/service/: ShellService.kt
app/src/main/kotlin/sh/gravital/shell/session/: SessionModel.kt  SessionState.kt  SessionTemplate.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
outputs/: RELEASES.md
scripts/: build-all.sh  build-android.sh  build-rust.sh  download-assets.sh  setup-env.sh
session-manager/: Cargo.toml
session-manager/.cargo/: config.toml
session-manager/core/: Cargo.toml
session-manager/core/src/: ipc.rs  lib.rs  manager.rs  pty.rs  session.rs  snapshot.rs
session-manager/jni/: Cargo.toml
session-manager/jni/src/: lib.rs
web/: .env.example  next.config.mjs  package.json  tsconfig.json  tsconfig.server.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/app/api/sessions/: route.ts
web/app/api/sessions/[id]/: route.ts
web/app/auth/signin/: page.tsx  signin.module.css
web/app/dashboard/: DashboardClient.tsx  dashboard.module.css  page.tsx
web/app/terminal/[sessionId]/: TerminalPage.tsx  page.tsx  terminal.module.css
web/lib/: auth.ts  migrate.ts  schema.sql
web/server/: index.ts
(+8 files in other folders)
