[workspace]
members = ["core", "jni"]
resolver = "2"

[workspace.dependencies]
uuid       = { version = "1.7",  features = ["v4", "serde"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }
anyhow     = "1"
thiserror  = "1"
log        = "0.4"
android_logger = "0.14"
zstd       = "0.13"
tar        = "0.4"
nix        = { version = "0.28", features = ["process", "signal", "fs", "term"] }
jni        = { version = "0.21", features = ["invocation"] }
once_cell  = "1"
