[package]
name = "gravitalshell-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "gravitalshell"
crate-type = ["cdylib"]

[dependencies]
gravitalshell-core = { path = "../core" }
jni        = { workspace = true }
once_cell  = { workspace = true }
log        = { workspace = true }
android_logger = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
uuid       = { workspace = true }
